--- a/WonInfo/app/src/main/res/layout/nav_header_loggedin.xml
+++ b/WonInfo/app/src/main/res/layout/nav_header_loggedin.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="6dp"
-            android:layout_marginEnd="1dp"
+            android:layout_marginEnd="10dp"
             android:text="닉네임"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@color/Theme_Black"
@@ -36,12 +36,13 @@
             android:id="@+id/nav_btn_profilepic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="10dp"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
