--- a/WonInfo/app/src/main/res/layout/community_text_comments_profile.xml
+++ b/WonInfo/app/src/main/res/layout/community_text_comments_profile.xml
@@ -35,12 +35,12 @@
                 app:srcCompat="@drawable/ic_profile" />
 
             <TextView
-                android:id="@+id/a_26_text01"
+                android:id="@+id/community_board_nickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="80dp"
                 android:layout_marginTop="10dp"
-                android:text="익명"
+                android:text=""
                 android:textColor="@color/Theme_Blue"
                 android:textSize="@dimen/menubigtitle_size"
                 android:textStyle="bold"
