--- a/WonInfo/app/src/main/res/layout/community_textboard.xml
+++ b/WonInfo/app/src/main/res/layout/community_textboard.xml
@@ -48,10 +48,11 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <FrameLayout
+        android:id="@+id/frameLayout2"
         android:layout_width="match_parent"
+
+
         android:layout_height="23dp"
-
-
         android:background="@drawable/item_line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -62,19 +63,17 @@
         android:id="@+id/textboard_write_btn"
         android:layout_width="197dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:background="@color/Theme_Red"
-        android:onClick="mOnPopupClick"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/all_item_cunfirmbtn"
         android:text="글쓰기"
         android:textColor="@color/Theme_White"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/community_market_editText4"
-        app:layout_constraintVertical_bias="0.062" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />
 
 
 </android.support.constraint.ConstraintLayout>
