--- a/WonInfo/app/src/main/res/layout/a_26_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/a_26_fragment.xml
@@ -23,7 +23,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/imageView7"
+                android:id="@+id/community_board_poto"
                 android:layout_width="59dp"
                 android:layout_height="54dp"
                 android:layout_marginStart="8dp"
