--- a/WonInfo/app/src/main/res/layout/community_text_comments_profile.xml
+++ b/WonInfo/app/src/main/res/layout/community_text_comments_profile.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clickable="true">
 
 
     <android.support.constraint.ConstraintLayout
@@ -16,20 +17,18 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/a_26_box0"
             android:layout_width="0dp"
-            android:layout_height="125dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/box"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="59dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="10dp"
-                app:layout_constraintBottom_toTopOf="@+id/community_board_title"
+                android:id="@+id/community_board_poto"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_profile" />
@@ -38,74 +37,78 @@
                 android:id="@+id/community_board_nickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="80dp"
+                android:layout_marginStart="13dp"
                 android:layout_marginTop="10dp"
-                android:text=""
+                android:text="id"
                 android:textColor="@color/Theme_Blue"
                 android:textSize="@dimen/menubigtitle_size"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/community_board_poto"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/community_board_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="35dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="12dp"
+                android:text="write_time"
                 android:textColor="@color/Theme_Gray"
                 android:textSize="@dimen/bigtitle_size"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
+                android:textAlignment="textEnd"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/community_board_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="4dp"
+                android:text="title"
                 android:textColor="@color/Theme_Black"
                 android:textSize="@dimen/list_item_bigtitle_size"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/community_board_content"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/community_board_content"
-                app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/community_board_poto" />
 
             <TextView
                 android:id="@+id/community_board_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="95dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="6dp"
+                android:text="content"
                 android:textColor="@color/Theme_Black"
                 android:textSize="@dimen/bigtitle_size"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/community_board_title" />
 
             <ImageView
                 android:id="@+id/imageView8"
-                android:layout_width="30dp"
-                android:layout_height="21dp"
-                android:layout_marginStart="330dp"
-                android:layout_marginTop="98dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/a_26_text05"
                 app:srcCompat="@drawable/ic_chat" />
 
             <TextView
                 android:id="@+id/a_26_text05"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="360dp"
-                android:layout_marginTop="100dp"
-                android:text="2"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="6dp"
+                android:text="0"
                 android:textColor="@color/Theme_Red"
                 android:textSize="@dimen/bigtitle_size"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
 
         </android.support.constraint.ConstraintLayout>
