--- a/WonInfo/app/src/main/res/layout/community_market_textbroad.xml
+++ b/WonInfo/app/src/main/res/layout/community_market_textbroad.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00ff00"
     tools:layout_editor_absoluteY="81dp">
 
 
     <EditText
-        android:id="@+id/community_market_editText1"
+        android:id="@+id/write2_edit_title"
         android:layout_width="fill_parent"
         android:layout_height="31dp"
         android:layout_margin="5dp"
@@ -26,25 +27,23 @@
         android:layout_height="2dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/item_line"
-        app:layout_constraintBottom_toTopOf="@+id/community_market_editText4"
+        app:layout_constraintBottom_toTopOf="@+id/write2_edit_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/community_market_editText1"
+        app:layout_constraintTop_toBottomOf="@+id/write2_edit_title"
         app:layout_constraintVertical_bias="0.0" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/community_main_1"
-        android:layout_width="381dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         android:background="@drawable/all_ripple_click"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.2"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/community_market_editText1"
-        app:layout_constraintWidth_percent="0.45">
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout4">
 
         <ImageView
             android:layout_width="64dp"
@@ -65,19 +64,21 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@drawable/item_line"
-        app:layout_constraintBottom_toTopOf="@+id/community_market_editText4"
+        app:layout_constraintBottom_toTopOf="@+id/write2_edit_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/community_market_editText4"
+        android:id="@+id/write2_edit_content"
         android:layout_width="fill_parent"
-        android:layout_height="289dp"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:background="@null"
         android:gravity="top|start"
         android:hint="내용 :"
+        android:maxLines="11"
+        android:minLines="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/community_main_1" />
@@ -85,12 +86,12 @@
     <FrameLayout
         android:id="@+id/frameLayout5"
         android:layout_width="match_parent"
-        android:layout_height="23dp"
+        android:layout_height="2dp"
         android:background="@drawable/item_line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/community_market_editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/write2_edit_content" />
 
     <Button
         android:id="@+id/market_textboard_write_btn"
