--- a/WonInfo/app/src/main/res/layout/community_list_item.xml
+++ b/WonInfo/app/src/main/res/layout/community_list_item.xml
@@ -85,31 +85,44 @@
         android:layout_height="16dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@drawable/ic_picture"
+        android:tint="@color/Theme_Gray"/>
 
     <ImageView
         android:id="@+id/community_list_item_new"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/community_list_item_comment"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        android:layout_marginEnd="3dp"
+        android:tint="@color/Theme_Blue"
+        app:layout_constraintBottom_toBottomOf="@+id/community_list_item_content"
+        app:layout_constraintEnd_toStartOf="@+id/community_list_item_comment2"
+        app:srcCompat="@drawable/ic_comment" />
+
+    <TextView
+        android:id="@+id/community_list_item_comment2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="0"
+        android:textColor="@color/Theme_Blue"
+        app:layout_constraintBottom_toBottomOf="@+id/community_list_item_content"
+        app:layout_constraintEnd_toStartOf="@+id/community_list_item_comment" />
 
     <ImageView
         android:id="@+id/community_list_item_comment"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="3dp"
+        android:tint="@color/Theme_Red"
+        app:layout_constraintBottom_toBottomOf="@+id/community_list_item_content"
         app:layout_constraintEnd_toStartOf="@+id/community_list_item_like"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@drawable/ic_like" />
 
     <TextView
         android:id="@+id/community_list_item_like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="like"
+        android:text="0"
         android:textColor="@color/Theme_Red"
         app:layout_constraintBaseline_toBaselineOf="@+id/community_list_item_content"
         app:layout_constraintEnd_toStartOf="@+id/guideline3" />
