--- a/WonInfo/app/src/main/res/layout/community_text_comments.xml
+++ b/WonInfo/app/src/main/res/layout/community_text_comments.xml
@@ -69,6 +69,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="41dp"
+                android:layout_height="38dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+
+
 
         </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
