--- a/WonInfo/app/src/main/res/layout/nav_header_loggedin.xml
+++ b/WonInfo/app/src/main/res/layout/nav_header_loggedin.xml
@@ -48,6 +48,28 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@mipmap/ic_appicon_round" />
 
+        <ImageView
+            android:id="@+id/imageView_message"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="40dp"
+            app:layout_constraintStart_toEndOf="@+id/nav_btn_profilepic"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_message" />
+
+
+        <ImageView
+            android:id="@+id/imageView_setting"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="16dp"
+
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toEndOf="@+id/nav_btn_profilepic"
+            app:layout_constraintTop_toBottomOf="@+id/imageView_message"
+            app:srcCompat="@drawable/ic_settings" />
+
 
     </android.support.constraint.ConstraintLayout>
 
