--- a/WonInfo/app/src/main/res/menu/nav_menu_loggedin.xml
+++ b/WonInfo/app/src/main/res/menu/nav_menu_loggedin.xml
@@ -20,12 +20,20 @@
                     android:id="@+id/nav_sleepout"
                     android:icon="@drawable/ic_dormitory"
                     android:title="기숙사 외박신청" />
+                <item
+                    android:id="@+id/nav_bookmark_soldier1"
+                    android:icon="@drawable/ic_soldier"
+                    android:title="설정 (환경설정)" />
+                <item
+                    android:id="@+id/nav_bookmark_soldier2"
+                    android:icon="@drawable/ic_settings"
+                    android:title="설정 (환경설정)" />
             </menu>
         </item>
     </group>
 
 
-    <item android:title="Setting">
+    <item android:title="Information">
         <menu>
             <item
                 android:id="@+id/nav_bookmark_mypage"
