--- a/WonInfo/app/src/main/res/values/dimens.xml
+++ b/WonInfo/app/src/main/res/values/dimens.xml
@@ -20,6 +20,15 @@
     <dimen name="bigtitle_size">15sp</dimen>
     <dimen name="menubigtitle_size">20sp</dimen>
 
+    <!--HS_font-->
+    <dimen name="font_13sp">13sp</dimen>
+    <dimen name="font_14sp">14sp</dimen>
+    <dimen name="font_15sp">15sp</dimen>
+    <dimen name="font_16sp">16sp</dimen>
+    <dimen name="font_17sp">17sp</dimen>
+    <dimen name="font_18sp">18sp</dimen>
+    <dimen name="font_19sp">19sp</dimen>
+
 
 
 </resources>
